# Retail-Company

./: .dockerignore  .env.example  AGENTS.md  AI Technical Assignment - Retail Company.md  Dockerfile  Makefile  README.md  app.py  architecture.md  docker-compose.yml  pyproject.toml  requirements.txt  results.md  run_tests.py  streamlit_app.py  test_query.txt  ui.html  ui_server.py
.claude/: launch.json
.streamlit/: config.toml
data/: golden_trios.json  learning_candidates.json  pending_report_actions.json  saved_reports.json  user_preferences.json
docs/: all_reports_unified.html  assignment_validation_dashboard.html  how_to_test.html  index.html  manual_execution_results.html  project_structure.html  prompt_by_prompt.html
outputs/: assignment_deliverables_review_v2_20260312.html  assignment_detailed_review_20260312.html  full_run.txt  full_run_after_gcp.txt  manual_execution_transcript_v2.txt  manual_execution_transcript_v3.txt  observability_20260311_221152.json  observability_20260311_221245.json  observability_20260311_225359.json  observability_20260311_225442.json  observability_20260311_231434.json  observability_20260314_215718.json  observability_20260314_221056.json  observability_20260314_222427.json  observability_20260314_223530.json  observability_evidence.md  qa_gate_summary.json  qa_gate_summary.md  session_20260310_225357.txt  session_20260310_225422.txt  session_20260311_163306.txt  session_20260311_163314.txt  session_20260311_172012.txt  session_20260311_213926.txt  session_20260311_214049.txt  session_20260311_221135.txt  (+29 more)
tests/: serve.js  (+16 more)
(+42 files in other folders)
